# backend/app/Http/Resources/Roles/RolesDelete.php
@@ -1,11 +1,11 @@
 <?php
 
-namespace App\Http\Resources\Permissions;
+namespace App\Http\Resources\Roles;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class PermissionsCreate extends JsonResource {
+class RolesDelete extends JsonResource {
     /**
      * Transform the resource into an array.
      *
@@ -17,8 +17,12 @@ class PermissionsCreate extends JsonResource {
 
     /**
      * Customize the response for this resource.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\JsonResponse
      */
     public function toResponse($request) {
-        return response()->json(['data' => 'success'], 201);
+        return response()->json(['data' => 'success']);
     }
+
 }
