# backend/app/Http/Resources/Roles/RolesUpdate.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources\Permissions;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use App\Http\Resources\Permissions\PermissionsSearch;
+
+class RolesUpdate extends JsonResource {
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array {
+        return [
+            'id'          => $this["id"],
+            'name'        => $this["name"],
+            'description' => $this["description"],
+            'created_at'  => $this["created_at"],
+            'updated_at'  => $this["updated_at"],
+            'permissions' => PermissionsSearch::collection($this->whenLoaded('permissions')),
+        ];
+    }
+
+}
